// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Seo /> should render article 1`] = `
[
  <html
    lang="en"
  />,
  <title>
    Hosting a static website on Amazon S3
  </title>,
  <meta
    content="public, max-age=0, must-revalidate"
    httpEquiv="cache-control"
  />,
  <meta
    content="Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option..."
    name="description"
  />,
  <meta
    content="en_GB"
    property="og:locale"
  />,
  <meta
    content="Broken Robot"
    property="og:site_name"
  />,
  <meta
    content="Hosting a static website on Amazon S3"
    property="og:title"
  />,
  <meta
    content="Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option..."
    property="og:description"
  />,
  <meta
    content="https://www.brokenrobot.xyz/blog/hosting-a-static-website-on-amazon-s3/"
    property="og:url"
  />,
  <meta
    content="article"
    property="og:type"
  />,
  <meta
    content="2023-05-04"
    property="og:article:published_time"
  />,
  <meta
    content="Tamas Mezei"
    property="og:article:author"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content="Hosting a static website on Amazon S3"
    name="twitter:title"
  />,
  <meta
    content="Hosting a simple static website on Amazon Web Services (AWS) can be daunting at first, but luckily it’s quite straightforward. One option..."
    name="twitter:description"
  />,
  <meta
    content="https://www.brokenrobot.xyz/blog/hosting-a-static-website-on-amazon-s3/"
    name="twitter:url"
  />,
]
`;

exports[`<Seo /> should render website 1`] = `
[
  <html
    lang="en"
  />,
  <title>
    Blog
  </title>,
  <meta
    content="public, max-age=0, must-revalidate"
    httpEquiv="cache-control"
  />,
  <meta
    content="Blog posts"
    name="description"
  />,
  <meta
    content="en_GB"
    property="og:locale"
  />,
  <meta
    content="Broken Robot"
    property="og:site_name"
  />,
  <meta
    content="Blog"
    property="og:title"
  />,
  <meta
    content="Blog posts"
    property="og:description"
  />,
  <meta
    content="https://www.brokenrobot.xyz/blog/"
    property="og:url"
  />,
  <meta
    content="website"
    property="og:type"
  />,
  <meta
    content="summary"
    name="twitter:card"
  />,
  <meta
    content="Blog"
    name="twitter:title"
  />,
  <meta
    content="Blog posts"
    name="twitter:description"
  />,
  <meta
    content="https://www.brokenrobot.xyz/blog/"
    name="twitter:url"
  />,
]
`;
